# gmtd

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: release.yml
gmtd/: __init__.py  cli.py
