### BUILD CONFIG ###

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
authors = [{name = "Ben Soyka", email = "bensoyka@icloud.com"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
dependencies = ["colorama==0.4.4"]
dynamic = ["version", "description"]
license = {file = "LICENSE"}
name = "gmtd"
readme = "README.md"
requires-python = "~=3.8"

[project.scripts]
gmtd = "gmtd.cli:main"

[project.urls]
Changelog = "https://github.com/bsoyka/gmtd/releases"
Documentation = "https://github.com/bsoyka/gmtd#readme"
Source = "https://github.com/bsoyka/gmtd"

### TOOLS ###

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
profile = "black"

[tool.poe.tasks]
_autoflake = "autoflake -i -r --remove-all-unused-imports ."
_black = "black ."
_isort = "isort ."
format = {sequence = ["_autoflake", "_black", "_isort"], help = "Format all Python code"}
install = {cmd = "flit install -s", help = "Install the library locally"}

[tool.pylint.VARIABLES]
allowed-redefined-builtins = "exit"
